# lambda-kafka-proxy

./: Makefile  README.md  pyproject.toml
lambda_package/kafka_client/: __init__.py  kafka.py
services/kafka_proxy/: lambda_function.py
