[tool.poetry]
name = "lambda-package"
version = "0.1.0"
description = ""
authors = ["manussanunb <manussanun.bu@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="lambda_package"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "2.3.0"
pendulum = "^3.0.0"
dacite = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
